test/good/typetest18.fsf
type bad1 = Bad1 and bad2 = Bad2
