test/bad/21_1_spectest_bad.fsf
type bad2 = Bad2
type bad2 = Bad2'

